<resources>
    <string name="app_name">Cost Accounting</string>

    <string name="USD">United States Dollar</string>
    <string name="EUR">EURO</string>
    <string name="GBP">British Pound</string>
    <string name="RUB">Russian Rouble</string>
    <string name="AUD">Australian Dollar</string>
    <string name="AZN">Azerbaijan Manat</string>
    <string name="ALL">Albanian Lek</string>
    <string name="DZD">Algerian Dinar</string>
    <string name="AMD">Armenian Dram</string>
    <string name="ARS">Argentine Peso</string>
    <string name="XAF">Central African CFA Franc</string>
    <string name="BDT">Bangladeshi Taka</string>
    <string name="BGN">Bulgarian Lev</string>
    <string name="BOB">Boliviano</string>
    <string name="BRL">Brazilian Real</string>
    <string name="HUF">Hungarian Forint</string>
    <string name="KRW">South Korean Won</string>
    <string name="VND">Vietnamese Dong</string>
    <string name="HNL">Honduran Lempira</string>
    <string name="GTQ">Guatemalan Quetzal</string>
    <string name="GHS">Ghanaian Cedi</string>
    <string name="HKD">Hong Kong Dollar</string>
    <string name="GEL">Georgian Lari</string>
    <string name="DKK">Danish Krone</string>
    <string name="DOP">Dominican Peso</string>
    <string name="FJD">Fijian Dollar</string>
    <string name="TTD">Trinidad and Tobago Dollar</string>
    <string name="EGP">Egyptian Pound</string>
    <string name="AED">United Arab Emirates Dirham</string>
    <string name="INR">Indian Rupee</string>
    <string name="JOD">Jordanian Dinar</string>
    <string name="IQD">Iraqi Dinar</string>
    <string name="IDR">Indonesian Rupiah</string>
    <string name="KZT">Kazakhstani Tenge</string>
    <string name="CAD">Canadian Dollar</string>
    <string name="QAR">Qatari Riyal</string>
    <string name="KES">Kenyan Shilling</string>
    <string name="CRC">Costa Rican Colon</string>
    <string name="KGS">Kyryzstani Som</string>
    <string name="CNY">Chinese Yuan</string>
    <string name="COP">Colombian Peso</string>
    <string name="MMK">Kyat</string>
    <string name="LBP">Lebanese Pound</string>
    <string name="MXN">Mexican Peso</string>
    <string name="MKD">Macedonian Dinar</string>
    <string name="MYR">Malaysian Ringgit</string>
    <string name="MDL">Moldovan Leu</string>
    <string name="MAD">Moroccan Dirham</string>
    <string name="RON">Romanian Leu (new)</string>
    <string name="NZD">New Zealand Dollar</string>
    <string name="NPR">Nepalese Rupee</string>
    <string name="NGN">Nigerian Naira</string>
    <string name="NIO">Nicaraguan Cordoba</string>
    <string name="TMT">Turkmenistan Manat</string>
    <string name="ILS">Israeli Shekel (new)</string>
    <string name="TWD">Taiwan Dollar</string>
    <string name="NOK">Norwegian Krone</string>
    <string name="PYG">Paraguayan Guarani</string>
    <string name="MOP">Pataca</string>
    <string name="PLN">Polish Zloty</string>
    <string name="PEN">Peruvian Sol (new)</string>
    <string name="PKR">Pakistani Rupee</string>
    <string name="SGD">Singapore Dollar</string>
    <string name="SCR">Seychellois Rupee</string>
    <string name="RSD">Serbian Dinar</string>
    <string name="SAR">Saudi Riyal</string>
    <string name="SRD">Suriname Dollar</string>
    <string name="TJS">Tajikistani Somoni</string>
    <string name="THB">Thai Baht</string>
    <string name="TRY">Turkish Lira</string>
    <string name="TND">Tunisian Dinar</string>
    <string name="UGX">Ugandan Shilling</string>
    <string name="UZS">Uzbekistan Sum</string>
    <string name="UAH">Ukrainian Hryvnia</string>
    <string name="PHP">Philippine Peso</string>
    <string name="CZK">Czech Koruna</string>
    <string name="CLP">Chilean Peso</string>
    <string name="SEK">Swedish Krona</string>
    <string name="CHF">Swiss Frank</string>
    <string name="LKR">Sri Lankan Rupee</string>
    <string name="ZAR">South African Rand</string>
    <string name="JPY">Japanese Yen</string>
    <string name="JMD">Jamaican Dollar</string>
    <string name="AOA">Angolan Kwanza</string>
    <string name="IRR">Iranian Rial</string>
    <string name="MZN">Mozambican Metical</string>
    <string name="MVR">Maldivian Rufiyaa</string>
    <string name="XOF">West African CFA Franc</string>
    <string name="TZS">Tanzanian Shilling</string>
    <string name="LYD">Libyan Dinar</string>
    <string name="RWF">Rwandan Franc</string>
    <string name="BWP">Botswana Pula</string>
    <string name="MGA">Malagasy Ariary</string>
    <string name="CVE">Cape Verdean Escudo</string>
    <string name="MNT">Mongolian Tugrug</string>
    <string name="OMR">Omani Rial</string>
    <string name="BND">Brunei Dollar</string>
    <string name="YER">Yemeni Rial</string>
    <string name="MUR">Mauritian Rupee</string>
    <string name="SYP">Syrian Pound</string>
    <string name="SDG">Sudanese Pound</string>
    <string name="PGK">Kina</string>
    <string name="KYD">Cayman Islands Dollar</string>
    <string name="AFN">Afghani</string>
    <string name="BHD">Bahraini Dinar</string>
    <string name="LAK">Lao Kip</string>
    <string name="CDF">Congolese Franc</string>
    <string name="GNF">Guinean Franc</string>
    <string name="BIF">Burundian Franc</string>
    <string name="CUC">Cuban Convertible Peso</string>
    <string name="BYR">Belarusian Ruble</string>
    <string name="URY">Uruguayan Peso</string>
    <string name="HRV">Croatian Kuna</string>
    <string name="ETB">Ethiopian Birr</string>
    <string name="PAB">Panamanian Balboa</string>
    <string name="SVC">Salvadoran Colon</string>
    <string name="BIH">Bosnia and Herzegovina Convertible Mark</string>
    <string name="ISK">Icelandic Krona</string>
    <string name="KHR">Cambodian Riel</string>
    <string name="NAD">Namibian Dollar</string>
    <string name="SSP">South Sudanese Pound</string>
    <string name="XPF">CFP Franc</string>
    <string name="HTG">Haitian Gourde</string>
    <string name="BSD">Bahamian Dollar</string>
    <string name="SLL">Sierra Leonean Leone</string>
    <string name="MWK">Malawian Kwacha</string>
    <string name="ERN">Eritrean Nakfa</string>
    <string name="SZL">Swazi Lilangeni</string>
    <string name="LSL">Lesotho Loti</string>
    <string name="LRD">Liberian Dollar</string>
    <string name="DJF">Djiboutian Franc</string>
    <string name="SOS">Somali Shilling</string>
    <string name="GMD">Gambian Dalasi</string>
    <string name="KMF">Comorian Franc</string>
    <string name="STD">Sao Tome and Principe Dobra</string>
    <string name="XRP">Ripple</string>
    <string name="BTC">Bitcoin</string>
    <string name="ETH">Ethereum</string>
    <string name="LTC">Litecoin</string>
    <string name="GYD">Guyanese Dollar</string>

    <string name="food">Food</string>
    <string name="vehicles">Vehicles</string>
    <string name="home">Home</string>
    <string name="health">Health</string>
    <string name="cafe">Cafe</string>
    <string name="education">Education</string>
    <string name="family">Family</string>
    <string name="other">Other</string>

    <string name="gift">Gift</string>
    <string name="salary">Salary</string>
    <string name="interestPayment">Interest payment</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="addAccountActivityTitle">New account</string>
    <string name="successfulOperation">Success!</string>
    <string name="baseCurrencyMessage">Selected currency %1$s will be saved as base currency. You can change base currency in settings.</string>
    <string name="baseCurrencyTitle">Base currency</string>
    <string name="creatingFirstAccountTitle">First account</string>
    <string name="creatingFirstAccountMessage">It seems that it is your first launch of this application. To proceed you need to create your first account in which you will be storing money for accounting.</string>
    <string name="addCategoryActivityTitle">New category</string>
    <string name="addTransactionActivityTitle">New transaction</string>
    <string name="accountSelectorTitle">Choose account</string>
    <string name="categorySelectorTitle">Choose category</string>
    <string name="chooseCurrencyActivityTitle">Choose currency</string>
    <string name="editAccountActivityTitle">Edit account</string>
    <string name="positiveButton">Yes</string>
    <string name="negativeButton">No</string>
    <string name="deleteAccountTitle">Delete account?</string>
    <string name="deleteAccountMessage">Are you sure you want to delete this account? This will also delete all transactions that were done with this account.</string>
    <string name="editCategoryActivityTitle">Edit category</string>
    <string name="deleteCategoryTitle">Delete category?</string>
    <string name="deleteCategoryMessage">Are you sure you want to delete this category? This will also delete all transactions that were done with this category.</string>
    <string name="editTransactionActivityTitle">Edit transaction</string>
    <string name="deleteTransactionTitle">Delete transaction?</string>
    <string name="deleteTransactionMessage">Are you sure you want to delete this transaction?</string>
    <string name="allAccountsTitle">All accounts</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="currency">Currency</string>
    <string name="add">Add</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="accountsItem">Accounts</string>
    <string name="transactionsItem">Transactions</string>
    <string name="categoriesItem">Categories</string>
    <string name="delete">Delete</string>
    <string name="total">Total:</string>
    <string name="expenses">Expenses</string>
    <string name="incomes">Incomes</string>
    <string name="settingsItem">Settings</string>
    <string name="settingsBaseCurrency">Base currency</string>
</resources>